# tracer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  main.cpp
include/: camera.hpp  color.hpp  image.hpp  light_source.hpp  material.hpp  png_saver.hpp  profiler.hpp  ray.hpp  renderer.hpp  scene.hpp
include/geometry/: object.hpp  sphere.hpp
include/math/: quaternion.hpp  vec3f.hpp
scripts/: film
src/: image.cpp  png_saver.cpp  renderer.cpp  vec3f.cpp
